Fix home page align?

--- a/src/app/pages/test/test.component.scss
+++ b/src/app/pages/test/test.component.scss
@@ -1,7 +1,8 @@
 @import "/src/styles.scss";
 
 :host {
-  // height: calc(100vh - var(--headerHeight) - var(--footerHeight));
+  display: flex;
+  justify-content: center;
   width: 100%;
   background: $medium;
   color: $dark;
